@@ -1,4 +1,10 @@
-$Id: CHANGES,v 1.254 2004/07/07 13:34:06 stelian Exp $
+$Id: CHANGES,v 1.255 2004/07/13 08:17:30 stelian Exp $
+
+Changes between versions 0.4b37 and 0.4b38 (released ????????????)
+==================================================================
+
+1.	Fix a couple of troff syntax bugs in the man pages.
+	Thanks to Eric Raymond <esr@thyrsus.com> for the patch.
 
 Changes between versions 0.4b36 and 0.4b37 (released July 7, 2004)
 ==================================================================
